wings/wings.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: wings
---
# --- Deployment ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wings
  namespace: wings
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: wings
  template:
    metadata:
      labels:
        app: wings
    spec:
      serviceAccountName: wings
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      securityContext:
        fsGroupChangePolicy: "Always"
      nodeSelector:
        kubernetes.io/hostname: harkesh
      containers:
        - name: wings
          image: ghcr.io/pelican-dev/wings:latest@sha256:fee255aa306c1829c5b9e96cdcb50d4fd729eb7c8be359d9a56ad21c69581a3a
          securityContext:
            privileged: true
            runAsUser: 0
            runAsGroup: 0
          tty: true
          ports:
            - containerPort: 8080
            - containerPort: 2022
            - containerPort: 8443
          volumeMounts:
            - mountPath: /var/run/docker.sock
              name: docker-sock
            - mountPath: /var/lib/docker/containers
              name: docker-containers
            - mountPath: /etc/pelican
              name: pelican-config
            - mountPath: /var/lib/pelican
              name: pelican-data
            - mountPath: /var/log/pelican
              name: pelican-logs
            - mountPath: /tmp/pelican
              name: pelican-tmp
            - mountPath: /etc/ssl/certs
              name: ssl-certs
              readOnly: true
      volumes:
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock
            type: Socket
        - name: docker-containers
          hostPath:
            path: /var/lib/docker/containers
            type: DirectoryOrCreate
        - name: pelican-config
          hostPath:
            path: /etc/pelican
            type: DirectoryOrCreate
        - name: pelican-data
          hostPath:
            path: /var/lib/pelican
            type: DirectoryOrCreate
        - name: pelican-logs
          hostPath:
            path: /var/log/pelican
            type: DirectoryOrCreate
        - name: pelican-tmp
          hostPath:
            path: /tmp/pelican
            type: DirectoryOrCreate
        - name: ssl-certs
          hostPath:
            path: /etc/ssl/certs
            type: Directory
---
# --- Service ---
apiVersion: v1
kind: Service
metadata:
  name: wings-svc
  namespace: wings
spec:
  type: ClusterIP
  ports:
    - name: wings-api
      protocol: TCP
      port: 8443
      targetPort: 8080
    - name: wings-sftp
      protocol: TCP
      port: 2022
      targetPort: 2022
---
