wings/wings-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wings-ingress
  namespace: wings
  annotations:
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
  - host: wings.castaldo.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wings-svc
            port:
              number: 8443
